src/parser/test/esprima/invalid-syntax/strict_assignment_let.js
function hello() { "use strict"; let = 1; }
